ðŸŽ‰ Major Update: Responsive Design, 4chan Forum, Connect4 Overhaul & Enterprise Security - Added responsive grid system with auto-fit/minmax - Mobile hamburger menus on all pages - Fixed Phantom wallet connection errors - Redesigned coin toss with blue theme and realistic physics - Complete Connect4 visual overhaul with CRT effects and neon glows - Implemented TRUE 4chan-style forum with bumping, sage, greentext, quotes - Added comprehensive security: XSS protection, DDoS throttling, rate limiting - Created security.js module with CSP headers - Added image validation (5MB, type checking, dimensions) - Deployment configs: vercel.json and .htaccess - 10+ documentation files with complete guides

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Retro Cyberpunk Web3 Arcade on Base Network",
   "main": "index.html",
   "scripts": {
-    "dev": "python -m http.server 8000",
-    "start": "python -m http.server 8000"
+    "dev": "npx http-server -p 8000 -o -c-1",
+    "start": "npx http-server -p 8000 -o -c-1"
   },
   "keywords": [
     "base",
