--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,32 @@
 # Dependencies
 node_modules/
-.pnp
+/.pnp
 .pnp.js
 
 # Testing
-coverage/
+/coverage
 
 # Next.js
-.next/
-out/
-build/
-dist/
+/.next/
+/out/
+.next
 
 # Production
-*.log
+/build
+dist/
+
+# Misc
+.DS_Store
+*.pem
+
+# Debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Environment variables
+# Local env files
 .env
-.env.local
+.env*.local
 .env.development.local
 .env.test.local
 .env.production.local
@@ -32,20 +38,9 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# OS
-.DS_Store
-Thumbs.db
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
+# Prisma
+prisma/.env
 
 # Uploads
-public/uploads/forum/*
-!public/uploads/forum/.gitkeep
-public/uploads/forum/thumbs/*
-!public/uploads/forum/thumbs/.gitkeep
-
+public/uploads/*
+!public/uploads/.gitkeep
