--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.17.1",
+    "@supabase/supabase-js": "^2.75.0",
     "@types/node": "^24.7.2",
     "@types/react": "^19.2.2",
     "autoprefixer": "^10.4.21",
@@ -46,7 +47,8 @@
     "prisma": "^6.17.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "sharp": "^0.34.4",    "tailwindcss": "^3.4.0",
+    "sharp": "^0.34.4",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.9.3",
     "viem": "^2.38.0",
     "wagmi": "^2.18.0"
